<?xml version="1.0" encoding="utf-8"?>
<resources>   
    <string name="app_name">Сауны и бани</string>
    <string name="city">Город:</string>
	<string name="price">Цена:</string>
	<string name="size">Вместимость:</string>
	<string name="photo">Только с фото</string>
	<string name="search">Поиск</string>
	<string name="no_data">Нет данных</string>	
    <string name="great_than">более</string>	
	<string name="less_than">менее</string>	
	<string name="rub_per_hour">руб./час</string>	
	<string name="persons">чел.</string>		
	<string name="filter_by_name">поиск по названию</string>	
	<string name="description">Главная</string>	
	<string name="photo_gallery">Фото</string>	
	<string name="view_sauna_items">Сауны</string>	
	<string name="show_on_map">Карта</string>	
	<string name="select_action">Выберите действие</string>	
	<string name="call_to_sauna">Позвонить в сауну</string>	
	<string name="view_sauna">Посмотреть информацию</string>	
	<string name="menu_search">Поиск</string>	
	<string name="menu_cities">Города</string>
	<string name="menu_map">Сауны на карте</string>
	<string name="menu_about">О программе</string>
	<string name="menu_settings">Настройки</string>
	<string name="application_error">Ошибка приложения</string>
	<string name="could_not_find_location">Не удалось определить местоположение</string>
	<string name="loading_data">Загрузка данных</string>
	<string name="please_wait">Пожалуйста, подождите...</string>
	<string name="splash">Вся информация предоставлена сайтом <a href="http://www.go-to-sauna.ru">www.go-to-sauna.ru</a></string>
	<string name="text_continue">Продолжить</string>
	<string name="error_no_network">Не удается установить соединение. Проверьте настройки подключения к сети Интернет.</string>
	<string name="error_io">Ошибка получения данных</string>
	<string name="error_json">Ошибка преобразования данных</string>
	<string name="sauna_items">Сауны и бани</string>
	<string name="more">Дополнительно</string>
	<string name="about">О программe</string>
	<string name="settings">Настройки</string>
	<string name="quit">Выйти</string>
	<string name="save">Сохранить</string>
	<string name="about_content">Вся информация предоставлена сайтом <a href="http://www.go-to-sauna.ru">www.go-to-sauna.ru</a> — каталог саун и бань в Ижевске, Казани, Кирове, Перми, Уфе и других городах. По вопросам работы приложения, добавления новых объектов в каталог и размещения рекламы обращаться: gotosauna@gmail.com</string>
	<string name="send_email">Написать письмо</string>
	<string name="gotosauna_email">gotosauna@gmail.com</string>
	<string name="send_using">Отправить письмо, используя...</string>
	<string name="settings_saved">Изменения вступят после перезапуска приложения. Пожалуйста, выйдите из приложения и откройте его снова.</string>
	<string name="photos_resolution">Качество фотографий</string>	
	<string name="gallery_info">Задать качество скачиваемых фотографий</string>		
	<string name="resolution_info">Загрузка фотографий в высоком качестве потребляет больше интернет трафика!</string>
	<string name="foto_is_absent">Фотографии отсутствуют</string>
	<string name="saunas_not_found">По вашему запросу саун не найдено. Попробуйте поменять критерии поиска.</string>
</resources>