<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
    
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:padding="10dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	
	    <TextView
	        android:id="@+id/textViewCity"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/city"        
	    />
	
	    <Spinner 
	        android:id="@+id/spinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="true"
	        android:prompt="@string/city"
	    />
	
	    <TextView
	        android:id="@+id/textViewPrice"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/price"
	    />
		    <SeekBar
	        android:id="@+id/seekBarPrice"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:progress="1000"        
	        android:max="2000" />
	       
	    <TextView
	        android:id="@+id/textViewSize"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/size"
	    />
	    
	    <SeekBar
	        android:id="@+id/seekBarSize"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:progress="10"  
	        android:max="20"
	         />    
	
	    <CheckBox
	        android:id="@+id/checkBoxPhoto"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/photo" />
	
	    <Button
	        android:id="@+id/buttonSearch"
	        android:layout_width="200dp" 
	        android:layout_height="wrap_content"
	        android:text="@string/search"     
	        android:layout_gravity="center"  
	        android:layout_marginTop="20dip"   />
	
	</LinearLayout>
</ScrollView>